--- a/CSS-excercise01.html
+++ b/CSS-excercise01.html
@@ -20,7 +20,7 @@
 
         #internal {
             background-color: green;
-            text: white;
+            color: white;
             font-size: 18px;
         }
 
